# django-stdimage

./: .editorconfig  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
tests/: admin.py  conftest.py  forms.py  models.py  settings.py  storage.py  test_commands.py  test_forms.py  test_models.py  test_utils.py  test_validators.py
