[metadata]
name = django-stdimage
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Django Standarized Image Field
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codingjoe/django-stdimage
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2

python_requires =  >=3.7

[options]
include_package_data = True
packages = stdimage
install_requires =
    Django>=2.2
    pillow>=2.5

setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[options.extras_require]
progressbar = progressbar2>=3.0.0

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.settings
addopts = --cov=stdimage --nomigrations --tb=short
filterwarnings =
    error

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
ignore_errors = True
show_missing = True

[flake8]
max_line_length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|docs|\.).*

[isort]
atomic = true
line_length = 88
known_first_party = stdimage, tests
include_trailing_comma = True
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
default_section=THIRDPARTY
combine_as_imports = true
